<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ComoJugar"
    android:padding="10dp"
    android:background="@drawable/bg_about">

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#CCFFFFFF"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="40dp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich"
            android:text="@string/Como" >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich"
            android:text="@string/finalidad_Header" >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:fontFamily="@font/aldrich"
            android:text="@string/finalidad" >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich"
            android:text="@string/partida_Header" >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:fontFamily="@font/aldrich"
            android:text="@string/partida" >

        </TextView>

    </LinearLayout>

</LinearLayout>